This file summarizes changes in WinMerge releases.
Numbers in parentheses refer to SourceForge.net tracker item numbers
old format (#XXXXXXX) or new format (patches:#XXXX) or
to Subversion revision numbers (rXXXXX). To open the tracker item, go to URL:
http://winmerge.org/tracker/[tracker-id]

WinMerge 2.15.5
  General:
  - Add support for very long path and file names (GitHub #87,95)
  - Enable Ctrl+C shortcut key on the file path bar
  - Remove support for old version control system (GitHub #96)
  - Improve Options > Color > Differences dialog layout (GitHub #89)
  - Improve information and formatting in Help > Configuration reporting (GitHub #92)
  - Improve visual layout of Open dialog (GitHub #97)
  File compare:
  - Add Window/Split menu item
  - Improve handling of last lines in files (GitHub #89,90,93)
  - Improve "Visual C++ Loose" filter (GitHub #95)
  - BugFix: Crash when saving a file if the active pane is diff detail pane
  - BugFix: Crash when pressing Alt+Down key while loading large files
  - BugFix: Crash when "mousing over" Plugin Setting context menu if Plugins are disabled
  - BugFix: Various problems reading of files > 2GB (GitHub #81)
  - BugFix: Selecting files "From MRU list" again works correctly
  Translations:
  - Update Italian translation (GitHub #86)
  - Update Japanese translation (Bitbucket #3)
  - Update Dutch translation
  - Bugfix Spanish translation error (Bitbucket Issue #108)
  Internals:
  - Various diffengine and compilation/build fixes
    (GitHub #89,90,91,92,94)

WinMerge 2.15.4
  Appearance:
  - BugFix: Dot icon in a drop-down menu is not drawn correctly
  File compare:
  - BugFix: Crash when reading a file in Google Drive File Stream (sf.net#2206)
  - BugFix: Crash when removing ghost lines (GitHub #80)
  - BugFix: Lines without EOL appears even though it is not the last line
  - Add Ctrl++/Ctrl+-(not numpad key) shortcut key to zoom in/out (sf.net#1727)
  - Remove 2GB file size limit for 64-bit build (GitHub #81, #82)