@@ -6,12 +6,13 @@ http://winmerge.org/tracker/[tracker-id]
 
 WinMerge 2.15.5
   General:
-  - Add support for very long path and file names (GitHub #87,95)
+  - Add support for very long path and file names (GitHub #87,95,99)
   - Enable Ctrl+C shortcut key on the file path bar
   - Remove support for old version control system (GitHub #96)
   - Improve Options > Color > Differences dialog layout (GitHub #89)
   - Improve information and formatting in Help > Configuration reporting (GitHub #92)
   - Improve visual layout of Open dialog (GitHub #97)
+  - Add icon for "New (3 panes)" menu item (GitHub #97)
   File compare:
   - Add Window/Split menu item
   - Improve handling of last lines in files (GitHub #89,90,93)
@@ -25,6 +26,7 @@ WinMerge 2.15.5
   - Update Italian translation (GitHub #86)
   - Update Japanese translation (Bitbucket #3)
   - Update Dutch translation
+  - Update German translation
   - Bugfix Spanish translation error (Bitbucket Issue #108)
   Internals:
   - Various diffengine and compilation/build fixes
